--- a/style.css
+++ b/style.css
@@ -45,10 +45,10 @@ body {
   margin-bottom: 20px;
 }
 .control-button {
-  padding: 12px 18px;
-  font-size: 16px;
+  padding: 10px 16px;
+  font-size: 14px;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
   text-decoration: none;  /* Pour le lien Coffee */
   transition: background-color 0.3s;
@@ -97,12 +97,13 @@ body {
 
 /* =================== TITRE SEO =================== */
 .seo-title {
-  font-size: 1em;
+  font-size: 0.8em;
   text-align: center;
-  color: #ccc;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  color: #444;
+  margin-top: -10px;
+  margin-bottom: 50px;
   font-weight: bold;
+  clear: both;
 }
 
 /* =================== PHRASE ET CHOIX =================== */
